--- a/20-js-forkify-app/package.json
+++ b/20-js-forkify-app/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.1",
-    "parcel": "^2.6.1"
+    "parcel": "^2.6.1",
+    "querystring-es3": "^0.2.1",
+    "url": "^0.11.0"
   },
   "dependencies": {
     "core-js": "^3.23.1",
